<resources>
    <string name="app_name">智能菜谱</string>
    <string name="home_main">菜谱</string>
    <string name="home_vadio">视频</string>
    <string name="home_friend">朋友</string>
    <string name="home_my">我</string>
    <string name="shared_suc">分享成功啦</string>
    <string name="shared_fail">分享失败啦</string>
    <string name="shared_cancel">分享取消了</string>
    <string name="is_null_password">密码为空 , 密码不能为空</string>
    <string name="is_null_username">手机号为空 , 手机号不能为空</string>

    <string name="phone_no_match">手机号格式不正确 , 请输入正确的手机号码</string>
    <string name="bad_pwd">密码格式错误 , 密码至少为6位</string>
    <string name="is_null_verification"> 验证码为空 , 验证码不能为空</string>
    <string name="error_createNewpassword_hint"> 新密码格式错误：新密码至少为6位</string>
    <string name="dif_pwd">两次密码输入不同 , 两次输入的密码不一致</string>
    <string name="login_register_register_agreement_alert">请选择同意瓷肌的软件服务协议</string>
    <string name="press_twice_exit">再次按返回键退出</string>
    <string name="exit_directly">直接退出</string>
    <string name="cook_menu">搜索食材  菜谱</string>
    <string name="cook_search">搜索</string>
    <string name="cook_search_type">搜索您感兴趣的</string>
    <string name="clear_history">清空历史记录</string>
    <string name="history_data">历史搜索</string>
    <string name="search_content_null">搜索的内容不能为空</string>
    <string name="search_count">次浏览</string>
    <string name="search_fav">人收藏</string>
    <string name="no_more_data">没有更多数据了</string>
    <string name="vedio_teach">视频教学</string>
    <string name="go_to_ready_vedio">视频准备中，请耐心等待。</string>
    <string name="go_to_ready">准备好</string>
    <string name="go_to_error">播放出错</string>
</resources>
