<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/ll_root"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fl_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>

    <RadioGroup
        android:id="@+id/rg_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_b2"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_main"
            style="@style/home_main_viewgroup"
            android:drawableTop="@drawable/home_view1"
            android:text="@string/home_main" />

        <RadioButton
            android:id="@+id/rb_vedio"
            style="@style/home_main_viewgroup"
            android:drawableTop="@drawable/home_view1"
            android:text="@string/home_vadio"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/rb_friend"
            style="@style/home_main_viewgroup"
            android:drawableTop="@drawable/home_view3"
            android:text="@string/home_vadio" />

        <RadioButton
            android:id="@+id/rb_me"
            style="@style/home_main_viewgroup"
            android:drawableTop="@drawable/home_view4"
            android:text="@string/home_my" />

    </RadioGroup>


</LinearLayout>



