<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.taijielan.cookbook.baes.view.TaijielanEditView
        android:id="@+id/tev_seach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:hinttext="@string/cook_menu" />


    <LinearLayout
        android:id="@+id/ll_history_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dis_12"
            android:text="@string/history_data"
            android:textColor="@color/color_b4"
            android:textSize="@dimen/dis_14sp" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"></android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/background_red"
            android:paddingBottom="@dimen/dis_6"
            android:paddingLeft="@dimen/dis_12"
            android:paddingRight="@dimen/dis_12"
            android:paddingTop="@dimen/dis_6"
            android:text="@string/clear_history"
            android:textColor="@color/color_b10" />


    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>